refactored the heck out of poll outages